<resources>
    <string name="app_name">ParkingApp</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="remember_me">Remember me?</string>
    <string name="password">Password</string>
    <string name="username">Email Address</string>
    <string name="title_activity_home_page">MainActivity</string>
    <string name="title_home">Saved Parking</string>
    <string name="title_dashboard">Add Parking</string>
    <string name="title_notifications">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>